log
Fri 26 Apr 2024 04:48:53 PM UTC: 
 hashmap.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
8867b53
Fri 26 Apr 2024 05:00:32 PM UTC: 
 hashmap.c | 25 +++++++++++++++++++------
 1 file changed, 19 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:103:8: error: unused variable ‘pos’ [-Werror=unused-variable]
  103 |   long pos = hash(key, map->capacity);
      |        ^~~
cc1: all warnings being treated as errors
Compilation failed
1c74b70
Fri 26 Apr 2024 05:19:09 PM UTC: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
8381bcb
Fri 26 Apr 2024 05:38:43 PM UTC: 
 hashmap.c | 21 ++++++++++++---------
 1 file changed, 12 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:91:15: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   91 |   while (map->bucket[pos] != NULL){
      |               ^~~~~~
      |               buckets
hashmap.c:93:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   93 |       map->bucket[pos]->key = NULL;
      |            ^~~~~~
      |            buckets
Compilation failed
64d9de6
Fri 26 Apr 2024 05:44:37 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
8ad554b
Fri 26 Apr 2024 05:45:28 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 40/70
e1eab2a
Fri 26 Apr 2024 05:45:46 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
b44ef4b
Sat 27 Apr 2024 06:33:10 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  11|2
total_score: 50/70
d36d429
Sat 27 Apr 2024 06:53:22 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
a2394ce
Sat 27 Apr 2024 07:00:23 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
test.c: In function ‘nextMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ec1e99
Sat 27 Apr 2024 07:01:39 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
3be3315
Sat 27 Apr 2024 07:01:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
124e1b8
